src/onegov.org/onegov/org/theme/styles/org.scss
/* ... */
@mixin smooth-edges {
    border-radius: 2px;
}

@mixin circle {
    border-radius: 1000px;
}

@mixin icon($icon) {
    content: $icon;
    display: inline-block;
    font-family: 'FontAwesome';
    font-weight: normal;
    width: 1.5ex;
}

@mixin prefix ($prop, $val) {
    // sass-lint:disable-block property-sort-order
    -webkit-#{$prop}: #{$val};
    -moz-#{$prop}: #{$val};
    -ms-#{$prop}: #{$val};
    #{$prop}: #{$val};
}

@mixin primary-color-background {
    background-color: $primary-color;
    color: $primary-fg-color;
}

/*
    Fixes a foundation js error
*/
.foundation-data-attribute-namespace {
    font-family: false;
}

/*
    The maximum width of a line relative to the font. This limits textblocks
    to a readable length.
*/
$max-line-width: 67ex;

.limit-line-width {
    max-width: $max-line-width;
}

/*
    The height of full-width banners
*/
$full-width-banner-height: 333px;

/*
    Zurb foundation uses this without !import, which causes IE11 to not
    apply the placeholder color.
*/
:-ms-input-placeholder {
    color: $input-placeholder-font-color !important;
}

/*
    Links without href and no role should not show the cursor
*/
a:not([href]):not([role]) {
    cursor: default;
}

.button,
.confirm,
.fc-event,
.partition-occupied {
    cursor: pointer !important;
}

/*
    Hyphenation for browsers which support it.
*/

p,
h1,
h2,
h3,
h4,
h5,
h6,
.page-text,
.page-lead,
.news-lead,
.newsletter-lead {
    @include prefix(hyphens, auto);
}

/*
    Get rid of the jump that is introduced when switching from a site with
    scrollbar to a site without (or vice versa)

    As a side-effect, this disables horizontal scrolling, but we don't have
    that anyway because of our mobile-first design.
*/
html {
    @media #{$medium-up} {
        overflow-x: hidden;
        width: 100vw;
    }
}

/*
    our footer is sticky, which is no easy feat, since variable length
    sticky footers don't work with anything but the latest browsers (flex)

    however, sticky footers work just fine if you know the height of the footer

    since we have semi-variable content in the footer (it can change, but not
    often), we read the height of the footer if the settings page is open
    and write the footer height into the custom theme variables

    see common.js for the oneliner that does that (look for footer_height)
*/

html,
body {
    height: 100%;
}

/*
    Normalized body text
*/
.common-text {
    color: $body-font-color;
    font-size: 1rem;
    line-height: auto;
}

/*
    Small text
*/
.small-text {
    font-size: .875rem;
}

.tiny-text {
    font-size: .8rem;
}

/*
    Small atomic text particles whose white-space should not be wrapped
*/
.nowrap {
    white-space: nowrap;
}

/*
    Apply on a row to flip the order of columns on mobile
*/
@media #{$small-only} {
    .reverse-on-mobile {
        display: flex;
        flex-direction: column-reverse;
    }
}

/*
    Heading sizes
*/
.h1-size { font-size: $h1-font-size - $h1-font-reduction; }

.h2-size { font-size: $h2-font-size - $h2-font-reduction; }

.h3-size { font-size: $h3-font-size - $h3-font-reduction; }

.h4-size { font-size: $h4-font-size - $h4-font-reduction; }

.h5-size { font-size: $h5-font-size - $h5-font-reduction; }

.h6-size { font-size: $h6-font-size - $h6-font-reduction; }

@media #{$medium-up} {
    .h1-size,
    .h2-size,
    .h3-size,
    .h4-size,
    .h5-size,
    .h6-size {
        line-height: $header-line-height;
    }

    .h1-size { font-size: $h1-font-size; }

    .h2-size { font-size: $h2-font-size; }

    .h3-size { font-size: $h3-font-size; }

    .h4-size { font-size: $h4-font-size; }

    .h5-size { font-size: $h5-font-size; }

    .h6-size { font-size: $h6-font-size; }
}
/* ... */

